--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,8 @@ h2,
 h3,
 h4,
 h5,
-h6 p {
+h6,
+p {
     margin-top: 0;
     margin-bottom: 0;
 }
@@ -80,6 +81,10 @@ img {
     margin: -1px;
 }
 
+.section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
 /* logo */
 .logo-name {
     font-family: 'Raleway';
@@ -105,6 +110,10 @@ img {
 
 
 /* page navigation */
+.page-header {
+border-bottom: 1px solid #ECECEC;
+}
+
 .header-nav {
     display: flex;
     align-items: center;
@@ -172,6 +181,8 @@ img {
 
 .hero{
     background-color: var(--bck-color);
+    padding-top: 200px;
+    padding-bottom: 200px;
 }
 
 .hero-title {
@@ -182,13 +193,13 @@ img {
         letter-spacing: 0.06em;
         text-transform: uppercase;
     color: var(--white-color);
+
+    margin-bottom: 30px;
 }
 
 .hero-button:hover,
 .hero-button:focus {
   background-color: #188CE8;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
 }
 
 .hero-button {
@@ -200,16 +211,34 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     background-color: var(--color-links);
     color: var(--white-color);
     cursor: pointer;
+
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px 32px;
+
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        border-radius: 4px;
+        border-color: var(--color-links);
+}
+
+/* our benefits */
+
+.benefits-menu {
+   display: flex;
+   flex-basis: calc((100% - 90px) / 4);
 }
 
 
-/* our benefits */
+
 .benefits-title {
         font-weight: 700;
         font-size: 14px;
         line-height: 1.14;
         text-transform: uppercase;
     color: var(--black-color);
+
+    margin-bottom: 10px;
 }
 
 .benefits-text {
@@ -220,6 +249,14 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 /* our occupation */
+.our-occupation {
+    padding-bottom: 94px;
+}
+
+.occupation-menu {
+    display: flex;
+    gap: 30px;
+}
 
 .occupation {
         font-weight: 700;
@@ -227,6 +264,8 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
         line-height: 1.17;
         text-align: center;
     color: var(--black-color);
+
+    margin-bottom: 50px;
 }
 
 /* our team */
@@ -240,6 +279,13 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
         line-height: 1.17;
         text-align: center;
     color: var(--black-color);
+
+    padding-bottom: 50px;
+}
+
+.team-menu {
+    display: flex;
+    gap: 30px;
 }
 
 .team-name {
@@ -247,6 +293,7 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
         font-size: 16px;
         line-height: 1.88;
     color: var(--black-color);
+    margin-bottom: 10px;
 }
 
 .team-position {
@@ -257,11 +304,22 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
 .team-theme {
     background-color: var(--white-color);
+    width: 270px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+        border-radius: 0px 0px 4px 4px;
+}
+
+.description {
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 /* footer */
 .footer {
  background-color: var(--bck-color) ;
+ padding-top: 60px;
+ padding-bottom: 60px;
 }
 
 .logo-footer {
@@ -278,6 +336,15 @@ font-family: 'Raleway';
     font-size: 26px;
     line-height: 1.19;
     color: var(--white-color);
+}
+
+.footer-logo {
+    display: block;
+    margin-bottom: 20px;
+}
+
+.menu-item {
+    margin-bottom: 9px;
 }
 
 .place {
@@ -318,19 +385,33 @@ font-family: 'Raleway';
     color: var(--color-links);
 } */
 
+.button-menu {
+    display: flex;
+    gap: 8px;
+    justify-content: center;
+    margin-bottom: 50px;
+}
+
+
 .main-button {
     font-family: inherit;
         font-weight: 500;
         font-size: 16px;
         line-height: 1.63;
     color: var(--main-black);
-    background-color: rgba(245, 244, 250, 1);
+    background-color: rgba(245, 244, 250, 1);  
+    border: var(--white-color);
+    border-radius: 4px;
+
+    padding: 6px 25px;
 }
 
 .main-button:hover, 
 .main-button:focus{
     color: var(--white-color);
     background-color: var(--color-links);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+        border-radius: 4px;
 }
 
 .secondary-button{
@@ -342,12 +423,35 @@ font-family: 'Raleway';
         background-color: rgba(245, 244, 250, 1);
         letter-spacing: 0.03em;
         cursor: pointer;
+        border-radius: 4px;
+        border: var(--white-color);
+
+        padding: 6px 22px;
 }
 
 .secondary-button:hover, 
 .secondary-button:focus {
     color: var(--white-color);
     background-color: var(--color-links);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+        border-radius: 4px;
+}
+
+.menu-results {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+}
+
+.results-item {
+    width: 370px;
+}
+
+.work-description {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border: 1px solid var(--our-works-icons);
+    background-color: var(--white-color);
 }
 
 .results-title {
@@ -355,10 +459,13 @@ font-family: 'Raleway';
         font-size: 18px;
         line-height: 2;
     color: var(--main-black);
+    margin-bottom: 4px;
+    margin-left: 24px;
 }
 
 .results-text {
         font-size: 16px;
         line-height: 1.88;
     color: var(--secondary-grey);
+    margin-left: 24px;
 }
