--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,9 @@ ol {
 
 button {
     cursor: pointer;
+    margin: 0 auto;
+    border: none;
+    border-radius: 4px;
 }
 
 img {
@@ -66,6 +69,8 @@ img {
 
 .list {
     list-style: none;
+    padding-left: 0;
+    margin: 0;
 }
 
 .visually-hidden {
@@ -122,7 +127,11 @@ border-bottom: 1px solid #ECECEC;
 .page-navigation {
     display: flex;
     align-items: center;
-    column-gap: 50px;
+}
+
+.page-navigation-menu {
+    display: flex;
+    gap: 50px;
 }
 
 .page-link:hover, 
@@ -193,7 +202,8 @@ border-bottom: 1px solid #ECECEC;
         letter-spacing: 0.06em;
         text-transform: uppercase;
     color: var(--white-color);
-
+width: 696px;
+margin: 0 auto;
     margin-bottom: 30px;
 }
 
@@ -219,7 +229,6 @@ border-bottom: 1px solid #ECECEC;
 
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
         border-radius: 4px;
-        border-color: var(--color-links);
 }
 
 /* our benefits */
@@ -229,6 +238,9 @@ border-bottom: 1px solid #ECECEC;
    flex-basis: calc((100% - 90px) / 4);
 }
 
+.benefits-item:not(:last-child) {
+    margin-right: 30px;
+}
 
 
 .benefits-title {
@@ -280,7 +292,7 @@ border-bottom: 1px solid #ECECEC;
         text-align: center;
     color: var(--black-color);
 
-    padding-bottom: 50px;
+    margin-bottom: 50px;
 }
 
 .team-menu {
@@ -291,14 +303,14 @@ border-bottom: 1px solid #ECECEC;
 .team-name {
         font-weight: 500;
         font-size: 16px;
-        line-height: 1.88;
+        line-height: 1.19;
     color: var(--black-color);
     margin-bottom: 10px;
 }
 
 .team-position {
         font-size: 16px;
-        line-height: 1.88;
+        line-height: 1.19;
     color: var(--text-color);
 }
 
@@ -311,8 +323,8 @@ border-bottom: 1px solid #ECECEC;
 
 .description {
     text-align: center;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 /* footer */
@@ -343,7 +355,7 @@ font-family: 'Raleway';
     margin-bottom: 20px;
 }
 
-.menu-item {
+.menu-item:not(:last-child) {
     margin-bottom: 9px;
 }
 
@@ -448,9 +460,9 @@ font-family: 'Raleway';
 }
 
 .work-description {
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding: 20px 24px;
     border: 1px solid var(--our-works-icons);
+    border-top: none;
     background-color: var(--white-color);
 }
 
@@ -460,12 +472,10 @@ font-family: 'Raleway';
         line-height: 2;
     color: var(--main-black);
     margin-bottom: 4px;
-    margin-left: 24px;
 }
 
 .results-text {
         font-size: 16px;
         line-height: 1.88;
     color: var(--secondary-grey);
-    margin-left: 24px;
 }
